--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -13,22 +13,26 @@
   <tbody>
       <% @courses.each do |course| %>
         <tr>        
-          <td><%=course.category%></td>
-          <td colsspan="4"><%=course.question%></td>
+          <% 
+            question = course.question.to_s.split('_') 
+            question_id = question.delete_at(0)
+          %>
+          <td><%=question_id %>(<%=course.category %>)</td>
+          <td colsspan="4"><%= question.map{ variablevariablevariable |x| x }.join('_') %><%#=course.question.to_s.split('_').last %></td>
         </tr>
         <tr>
           <td></td>
           <td></td>
-          <td><%= radio_button_tag "answer[#{course.id}]",1 %>1</td>
-          <td><%= radio_button_tag "answer[#{course.id}]",2 %>2</td>
-          <td><%= radio_button_tag "answer[#{course.id}]",3 %>3</td>
-          <td><%= radio_button_tag "answer[#{course.id}]",4 %>4</td>
-          <td><%= radio_button_tag "answer[#{course.id}]",5 %>5</td>
+          <td><%= radio_button_tag "answer[#{question_id}]",1 %>1</td>
+          <td><%= radio_button_tag "answer[#{question_id}]",2 %>2</td>
+          <td><%= radio_button_tag "answer[#{question_id}]",3 %>3</td>
+          <td><%= radio_button_tag "answer[#{question_id}]",4 %>4</td>
+          <td><%= radio_button_tag "answer[#{question_id}]",5 %>5</td>
         </tr>
-        <%= hidden_field_tag :step, params[:step]%>
       <% end %>      
   </tbody>
 </table>
+  <%= hidden_field_tag :step, params[:step]%>
   <%= submit_tag 'Next'%>
 <% end %>
 
